--- a/Mogi_models.ipynb
+++ b/Mogi_models.ipynb
@@ -7,10 +7,7 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import xarray as xr\n",
-    "import matplotlib.pyplot as plt\n",
-    "from pyproj import Proj\n",
-    "import pygmt"
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
